--- a/src/points_processes/CMakeLists.txt
+++ b/src/points_processes/CMakeLists.txt
@@ -5,44 +5,32 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release")
+endif()
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(sensor_msgs REQUIRED)
-find_package(visualization_msgs REQUIRED)
-find_package(tf2_ros REQUIRED)
-find_package(tf2_geometry_msgs REQUIRED)
-find_package(Eigen3 REQUIRED)
-find_package(interface_pkg REQUIRED)
+# find_package(visualization_msgs REQUIRED)
+# find_package(Eigen3 REQUIRED)
 
-add_executable(points_integration
-  src/points_integration.cpp
-)
+add_library(points_integration SHARED src/points_integration.cpp)
 ament_target_dependencies(points_integration
-  rclcpp
-  tf2_ros
-  tf2_geometry_msgs
+  rclcpp rclcpp_components 
   sensor_msgs
 )
 
-add_executable(corner_finder
-  src/find_corner.cpp
+rclcpp_components_register_node(points_integration PLUGIN "points_processes::PointIntegration" EXECUTABLE points_integration_node
 )
-ament_target_dependencies(corner_finder
-  rclcpp
-  tf2_ros
-  tf2_geometry_msgs
-  sensor_msgs
-  visualization_msgs
-  Eigen3
-  interface_pkg
-)
-
-install(TARGETS
-  points_integration
-  corner_finder
-  DESTINATION lib/${PROJECT_NAME}
+ament_export_targets(export_component)
+install(TARGETS points_integration
+        EXPORT export_component
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
+        RUNTIME DESTINATION bin
 )
 
 if(BUILD_TESTING)
@@ -50,7 +38,7 @@ if(BUILD_TESTING)
   # the following line skips the linter which checks for copyrights
   # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
+  # the following line skips cpplint (only works in a git repo)sensor_msgs::PointCloud2Modifier modifier(merged_cloud);
   # comment the line when this package is in a git repo and when
   # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
