--- a/src/corner_localization/CMakeLists.txt
+++ b/src/corner_localization/CMakeLists.txt
@@ -1,21 +1,20 @@
 cmake_minimum_required(VERSION 3.8)
-project(interface_pkg)
+project(corner_localization)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release")
+endif()
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(geometry_msgs REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
-
-rosidl_generate_interfaces(${PROJECT_NAME}
-  "msg/Corners.msg"
-  "msg/OneCorner.msg"
-  "msg/ControllerMsg.msg"
-  DEPENDENCIES geometry_msgs
-)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
