--- a/src/robot_controll/CMakeLists.txt
+++ b/src/robot_controll/CMakeLists.txt
@@ -1,19 +1,20 @@
 cmake_minimum_required(VERSION 3.8)
-project(description)
+project(robot_controll)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release")
+endif()
+
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-
-install(DIRECTORY
-  launch
-  urdf
-  DESTINATION share/${PROJECT_NAME}
-)
+find_package(rclcpp_components REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(visualization_msgs REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
