--- a/src/bring_up/package.xml
+++ b/src/bring_up/package.xml
@@ -13,6 +13,10 @@
   <test_depend>ament_lint_common</test_depend>
 
   <depend>ros2launch</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
 
   <export>
     <build_type>ament_cmake</build_type>
