--- a/src/points_processes/CMakeLists.txt
+++ b/src/points_processes/CMakeLists.txt
@@ -14,6 +14,13 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(laser_geometry REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
+find_package(pcl_ros REQUIRED)
+find_package(pcl_conversions REQUIRED)
+# find_package(tf2_geometry_msgs REQUIRED)
 # find_package(visualization_msgs REQUIRED)
 # find_package(Eigen3 REQUIRED)
 
@@ -21,6 +28,12 @@ add_library(points_integration SHARED src/points_integration.cpp)
 ament_target_dependencies(points_integration
   rclcpp rclcpp_components 
   sensor_msgs
+  laser_geometry
+  tf2_geometry_msgs
+  tf2_ros
+  tf2
+  pcl_ros
+  pcl_conversions
 )
 
 rclcpp_components_register_node(points_integration PLUGIN "points_processes::PointIntegration" EXECUTABLE points_integration_node
