--- a/src/corner_localization/CMakeLists.txt
+++ b/src/corner_localization/CMakeLists.txt
@@ -14,7 +14,22 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(pcl_ros REQUIRED)
+find_package(pcl_conversions REQUIRED)
 find_package(visualization_msgs REQUIRED)
+find_package(interface_pkg REQUIRED)
+
+add_library(corners_finder SHARED src/corners_find.cpp)
+ament_target_dependencies(corners_finder
+  rclcpp rclcpp_components
+  sensor_msgs
+  tf2 tf2_ros
+  pcl_ros pcl_conversions
+  visualization_msgs
+  interface_pkg
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
