--- a/src/robot_controll/CMakeLists.txt
+++ b/src/robot_controll/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(Eigen3 REQUIRED)
@@ -54,6 +55,7 @@ ament_target_dependencies(set_goal
   rclcpp_components
   std_msgs
   sensor_msgs
+  geometry_msgs
   tf2 tf2_ros
   Eigen3
   visualization_msgs
